weird safari clipping bug x 2

--- a/public/stylesheets/refinr5.css
+++ b/public/stylesheets/refinr5.css
@@ -90,7 +90,7 @@ h1#logo a {
 }
 
 .grid_8 h3.title {
-  line-height: 1.1em;
+  line-height: 1.2em;
 }
 .grid_3 h3 a, 
 .grid_4 h3 a {
